[gd_scene load_steps=44 format=3 uid="uid://bxfm6nxfi50s0"]

[ext_resource type="Script" path="res://scenes/bosque/enemigos/slime_boss.gd" id="1_oqi86"]
[ext_resource type="Texture2D" uid="uid://qcipw4u341lj" path="res://assets/sprites/enemies/Green Slime.png" id="2_h5881"]
[ext_resource type="Script" path="res://scripts/Hitbox.gd" id="3_r53pb"]
[ext_resource type="Script" path="res://scripts/Hurtbox.gd" id="4_pmvf4"]
[ext_resource type="Texture2D" uid="uid://ctt07hh42gsxy" path="res://assets/sprites/bigger_shadow.png" id="5_c4tbn"]
[ext_resource type="AudioStream" uid="uid://cgj1t2p8yrs0x" path="res://assets/sounds/10_Battle_SFX/77_flesh_02.wav" id="6_8tsav"]
[ext_resource type="Script" path="res://scripts/healthbar.gd" id="7_usm8h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ayddb"]
radius = 4.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1m1pa"]
atlas = ExtResource("2_h5881")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_865hc"]
atlas = ExtResource("2_h5881")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqqvr"]
atlas = ExtResource("2_h5881")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1r6v"]
atlas = ExtResource("2_h5881")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggi1m"]
atlas = ExtResource("2_h5881")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocmue"]
atlas = ExtResource("2_h5881")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8n3b"]
atlas = ExtResource("2_h5881")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jgaq"]
atlas = ExtResource("2_h5881")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmanu"]
atlas = ExtResource("2_h5881")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c111"]
atlas = ExtResource("2_h5881")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpkfs"]
atlas = ExtResource("2_h5881")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkxc2"]
atlas = ExtResource("2_h5881")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ylr1"]
atlas = ExtResource("2_h5881")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhtif"]
atlas = ExtResource("2_h5881")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd8xu"]
atlas = ExtResource("2_h5881")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gbyr"]
atlas = ExtResource("2_h5881")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3cud"]
atlas = ExtResource("2_h5881")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj1r6"]
atlas = ExtResource("2_h5881")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8lwo"]
atlas = ExtResource("2_h5881")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub8sc"]
atlas = ExtResource("2_h5881")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmos2"]
atlas = ExtResource("2_h5881")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jyt8v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m1pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_865hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqqvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1r6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggi1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocmue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8n3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jgaq")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmanu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c111")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpkfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkxc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ylr1")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhtif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd8xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gbyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3cud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj1r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8lwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub8sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmos2")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fm1sr"]
radius = 4.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v3v8b"]
radius = 4.1
height = 12.0

[sub_resource type="Animation" id="Animation_7ilby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/Hitbox_Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/Hurtbox_Shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_hurt")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SlimeSprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Shadow:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.4, 0.4)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SlimeSprite:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CollisionBox:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".:detection_range")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [600]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Hitbox/Hitbox_Shape:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Hurtbox/Hurtbox_Shape:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Jump_attack_hitbox/Jump_attack_hitbox_shape:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Jump_attack_hitbox/Jump_attack_hitbox_shape:disabled")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath(".:jump_attack_triggered")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m06v4"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"damage"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 50]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Hitbox/Hitbox_Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Hurtbox/Hurtbox_Shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_hurt")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ybnpn"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/Hitbox_Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/Hurtbox_Shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_hurt")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3dsk4"]
resource_name = "default"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [50, 50]
}

[sub_resource type="Animation" id="Animation_gy22i"]
resource_name = "jump_attack"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox/Hurtbox_Shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlimeSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.03333, 1.06667, 1.1, 4.5, 4.53333, 4.56667, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 4, 5, 6, 7, 7, 6, 5, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlimeSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2.73333, 4.5, 5),
"transitions": PackedFloat32Array(1, 0.5, 2, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -350), Vector2(0, 0), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.5, 4, 4.56667, 4.63333, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.4, 0.4), Vector2(0.8, 0.4), Vector2(0.12, 0.12), Vector2(0.12, 0.12), Vector2(0.44, 0.44), Vector2(0.4, 0.4), Vector2(0.4, 0.4)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlimeSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.03333, 4.43333, 4.5, 4.56667, 4.63333, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 1), Vector2(1.1, 2.5), Vector2(1.1, 2.5), Vector2(1, 1), Vector2(1.5, 1), Vector2(1, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/Hitbox_Shape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1, 4.63333, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionBox:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 4.56667, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [false, true, true, false, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:detection_range")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2000, 600, 600]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:speed")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1.26667, 4, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 45, 0, 50, 50]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Hitbox/Hitbox_Shape:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 4.63333, 5),
"transitions": PackedFloat32Array(1, 0.5, 0.5, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 2), Vector2(1.1, 1.3), Vector2(1, 1), Vector2(1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Hurtbox/Hurtbox_Shape:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 4.56667, 4.66667, 5),
"transitions": PackedFloat32Array(1, 0.5, 0.5, 0.5, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 2), Vector2(1.1, 1.3), Vector2(1.1, 2), Vector2(1, 1), Vector2(1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".:is_hurt")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1.26667, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Jump_attack_hitbox/Jump_attack_hitbox_shape:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 4.5, 4.56667, 4.66667, 5),
"transitions": PackedFloat32Array(1, 0.5, 0.5, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.3), Vector2(2, 2), Vector2(1, 1), Vector2(1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Jump_attack_hitbox/Jump_attack_hitbox_shape:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 4.5, 4.63333, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath(".:jump_attack_triggered")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qyy30"]
resource_name = "run"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [80, 80]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80kol"]
_data = {
"RESET": SubResource("Animation_7ilby"),
"damage": SubResource("Animation_m06v4"),
"death": SubResource("Animation_ybnpn"),
"default": SubResource("Animation_3dsk4"),
"jump_attack": SubResource("Animation_gy22i"),
"run": SubResource("Animation_qyy30")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qotx5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23si1"]
bg_color = Color(0.8, 0, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qcup"]
bg_color = Color(0.22782, 0.180842, 0.222009, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrcxv"]
bg_color = Color(1, 0.525374, 0.464771, 1)

[node name="Slime_boss" type="CharacterBody2D"]
texture_filter = 1
texture_repeat = 1
scale = Vector2(2, 2)
disable_mode = 1
collision_layer = 4
collision_mask = 53
motion_mode = 1
script = ExtResource("1_oqi86")
speed = 50

[node name="CollisionBox" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 0.8)
rotation = 1.5708
scale = Vector2(0.81, 0.9)
shape = SubResource("CapsuleShape2D_ayddb")

[node name="SlimeSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.627451)
sprite_frames = SubResource("SpriteFrames_jyt8v")
animation = &"death"

[node name="Hitbox" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 2
script = ExtResource("3_r53pb")
damage = 2

[node name="Hitbox_Shape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 0.8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ayddb")

[node name="Jump_attack_hitbox" type="Area2D" parent="."]
script = ExtResource("3_r53pb")
damage = 4

[node name="Jump_attack_hitbox_shape" type="CollisionShape2D" parent="Jump_attack_hitbox"]
position = Vector2(0, 0.8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fm1sr")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 0
script = ExtResource("4_pmvf4")

[node name="Hurtbox_Shape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 0.8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v3v8b")

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 4.8)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_c4tbn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_80kol")
}

[node name="hurt_vfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8tsav")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Healthbar" type="ProgressBar" parent="CanvasLayer"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -558.0
offset_top = 492.0
offset_right = -446.0
offset_bottom = 494.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_qotx5")
theme_override_styles/fill = SubResource("StyleBoxFlat_23si1")
show_percentage = false
script = ExtResource("7_usm8h")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="CanvasLayer/Healthbar"]

[node name="Damagebar" type="ProgressBar" parent="CanvasLayer/Healthbar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7qcup")
theme_override_styles/fill = SubResource("StyleBoxFlat_vrcxv")
show_percentage = false
script = ExtResource("7_usm8h")

[node name="jump_attack_timer" type="Timer" parent="."]

[node name="summon_slime_cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="CanvasLayer/Healthbar/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="jump_attack_timer" to="." method="_on_jump_attack_timer_timeout"]
[connection signal="timeout" from="summon_slime_cooldown" to="." method="_on_summon_slime_cooldown_timeout"]
